[project]
# 프로젝트의 기본 정보
name = "ad-content-generator"
version = "0.1.0"
description = "A service that generates advertising content for small business owners using GenAI."

# 이 프로젝트가 필요로 하는 파이썬 버전 (가장 중요)
requires-python = "==3.11"

# 프로젝트의 핵심 의존성 (requirements.in의 역할)
dependencies = [
    # --- AI/ML Core ---
    "torch",
    "torchvision",
    "torchaudio",
    "diffusers",
    "transformers",
    "accelerate",
    "xformers",

    # --- Web Framework & Server ---
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",

    # --- Image Handling ---
    "Pillow",

    # --- Utilities ---
    "python-dotenv",
]

[tool.uv]
# 나중에 uv가 사용할 수 있는 추가 설정 공간 (지금은 비워둠)